2003-08-20  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Changed the type of the result of the ! (NOT) operator to char;
	previously it returned the same type as the source. This allows
	us to eliminate all the genFloatNot functions (all of its target
	implementations were very buggy) since !float can use the same
	code as !long now.

	* src/SDCCicode.c (ast2iCode): ! returns char
	* src/mcs51/gen.c (genNot, genNotFloat),
	* src/ds390/gen.c (genNot, genNotFloat),
	* src/z80/gen.c (genNot, genNotFloat),
	* src/pic/gen.c (genNot, genNotFloat),
	* src/pic16/gen.c (genNot, genNotFloat): eliminated genNotFloat

2003-08-19  Bernhard Held <bernhard@bernhardheld.de>

	pic patch provided by Slade Rich <slade_rich@yahoo.com>
	1. Interrupt would not compile properly. Ensure PCLATH register is saved
	   during interrupts. Ensure WSAVE is located at a shared bank address.
	2. Fixed page selection in some places
	3. Fixed BTFSS/C to where necessary use registers directly and not simply
	   the registers name strings.
	4. Fixed "signed / unsigned compare" compiler warnings.
	5. The PIC port manages its own allocation of the general purpose
	   registers, but makes no attempt to reuse them. As a result when
	   compiling it soon runs out of general purpose registers. Some
	   additional code was added to the files pcode.c and device.c to walk
	   through the function call tree and rename the registers so that they
	   get reused.

	* src/pic/device.c
	* src/pic/gen.c
	* src/pic/glue.c
	* src/pic/pcode.c
	* src/pic/pcode.h
	* src/pic/ralloc.c
	* src/pic/ralloc.h
	* src/pic/genarith.c: Fixed problems with PIC 14 port in functions
	genPlus() & genMinus() when the result is the same as left or right

2003-08-18  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/z80/gen.c (isUnsplitable, fetchPairLong): fixed bug #770454

2003-08-18  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Made bitfield a distinct type from bit so that bitfields